--- a/cuda8-opencv3.2/Dockerfile
+++ b/cuda8-opencv3.2/Dockerfile
@@ -6,12 +6,12 @@ RUN apt-get -y install python-pip git nano curl tmux htop mc wget libeigen3-dev
 RUN apt-get install -y build-essential cmake libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev python-dev python-numpy libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libjasper-dev libdc1394-22-dev ocl-icd-opencl-dev libcanberra-gtk3-module
 RUN pip install matplotlib
 
-RUN git clone https://github.com/Itseez/opencv.git /opencv
-WORKDIR /opencv/
+RUN git clone https://github.com/Itseez/opencv.git /opt/opencv
+WORKDIR /opt/opencv/
 RUN git checkout 3.2.0
 
-RUN mkdir /opencv/build
-WORKDIR /opencv/build
+RUN mkdir /opt/opencv/build
+WORKDIR /opt/opencv/build
 RUN cmake -D CMAKE_BUILD_TYPE=RELEASE \
       -D CMAKE_INSTALL_PREFIX=/usr/local \
       -D WITH_OPENGL=ON \
@@ -25,3 +25,5 @@ RUN cmake -D CMAKE_BUILD_TYPE=RELEASE \
 RUN make -j7
 RUN make install
 RUN ldconfig
+
+WORKDIR /workspace
