--- a/bullet3/Dockerfile
+++ b/bullet3/Dockerfile
@@ -4,10 +4,8 @@ FROM nvidia/cudagl:${cuda_version}
 WORKDIR /bullet3
 
 # Install dependencies
-RUN apt update && apt install -y git cmake ffmpeg pkg-config qtbase5-dev libqt5opengl5-dev libassimp-dev libpython3.5-dev libboost-python-dev libtinyxml-dev
+RUN apt update && apt install -y git cmake ffmpeg pkg-config qtbase5-dev libqt5opengl5-dev libassimp-dev libpython3.5-dev python3-pip
 
 # Install bullet3
-RUN git clone https://github.com/bulletphysics/bullet3 /bullet3 && \
-  bash ./build_cmake_pybullet_double.sh
-RUN cd build_cmake && make install
-RUN export PYTHONPATH=/bullet3/build_cmake/examples/pybullet
+RUN git clone https://github.com/bulletphysics/bullet3 /bullet3
+RUN python3 setup.py install
